{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Moving",
            "id": "2bfa1620-cc95-42ab-bcab-345a5f3ca189",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "00083d25-8140-453a-bc42-ab51e028bbb5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "3faec35b-4799-40b6-8c14-a479095e8c20",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "4c2b8e89-52b9-4b31-bdf6-f7eae5d0ab1a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "36eeee47-6d8a-4229-82ca-d841889fc473",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "69e1e74f-e98f-4572-8672-cbb74ddba150",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "50748b38-3705-4c86-91d1-cec9771bd3f4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6f5d4f1f-617b-4383-9467-3e419e99e8fc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8b44144f-3c6c-4b61-86fc-0a8f0de4ff0a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and keyboard",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "ff6a6546-2b73-4d44-aa1e-9d493369f31b",
            "actions": [
                {
                    "name": "RightMouseButton",
                    "type": "Button",
                    "id": "ac9331a2-51a3-4567-bc24-8a6e854f3d69",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftMouseButton",
                    "type": "Button",
                    "id": "271af30e-5501-42ed-912b-81fcb82774b8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2d8aed00-7636-4bc5-93c4-e486114cb109",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1580f904-0a82-4065-9631-213ca144628a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse and keyboard",
            "bindingGroup": "Mouse and keyboard",
            "devices": []
        }
    ]
}